--- a/paper_analyses/2_retrieve_similar_loops/sabdab_test_set.ipynb
+++ b/paper_analyses/2_retrieve_similar_loops/sabdab_test_set.ipynb
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "16c965fd",
    "metadata": {},
    "outputs": [],
@@ -424,7 +424,10 @@
     "emc_embeddings = np.load(f\"{EMBEDDING_DIR}/esmc_embeddings_{LOOP_TYPE}.npy\")\n",
     "igbert_embeddings = np.load(f\"{EMBEDDING_DIR}/igbert_embeddings_{LOOP_TYPE}.npy\")\n",
     "saprot_embeddings = np.load(f\"{EMBEDDING_DIR}/saprot_3di_embeddings_{LOOP_TYPE}.npy\")\n",
-    "foldseek3di_embeddings = np.load(f\"{EMBEDDING_DIR}/foldseek3di_embeddings_{LOOP_TYPE}.npy\")"
+    "foldseek3di_embeddings = np.load(f\"{EMBEDDING_DIR}/foldseek3di_embeddings_{LOOP_TYPE}.npy\")\n",
+    "aminoaseed_embeddings = np.load(f\"{EMBEDDING_DIR}/aminoaseed_embeddings_{LOOP_TYPE}.npy\")\n",
+    "proteinmpnn_embeddings = np.load(f\"{EMBEDDING_DIR}/proteinmpnn_embeddings_{LOOP_TYPE}.npy\")\n",
+    "mif_embeddings = np.load(f\"{EMBEDDING_DIR}/mif_embeddings_{LOOP_TYPE}.npy\")"
    ]
   },
   {
@@ -492,6 +495,7 @@
    "outputs": [],
    "source": [
     "embeddings = {\n",
+    "    'igloo_angle': igloo_angle_embeddings,\n",
     "    'igloo_no_dihedral_loss_embeddings': igloo_no_dihedral_loss_embeddings,\n",
     "    'igloo_no_sequence_embeddings': igloo_no_sequence_embeddings,\n",
     "    'igloo_no_dihedrals_embeddings': igloo_no_dihedrals_embeddings,\n",
@@ -502,10 +506,12 @@
     "    'emc': emc_embeddings,\n",
     "    'igbert': igbert_embeddings,\n",
     "    'prostt5': prostt5_embeddings,\n",
-    "    'igloo_angle': igloo_angle_embeddings,\n",
     "    'prostt5_3di': prostt5_3di_embeddings,\n",
     "    'saprot_3di': saprot_embeddings,\n",
     "    'foldseek': foldseek3di_embeddings,\n",
+    "    'aminoaseed': aminoaseed_embeddings,\n",
+    "    'proteinmpnn': proteinmpnn_embeddings,\n",
+    "    'mif': mif_embeddings,\n",
     "}"
    ]
   },
@@ -643,7 +649,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"14\" valign=\"top\">20</th>\n",
+       "      <th rowspan=\"17\" valign=\"top\">20</th>\n",
        "      <th>ablang2</th>\n",
        "      <td>0.222329</td>\n",
        "      <td>0.223650</td>\n",
@@ -651,6 +657,15 @@
        "      <td>15.5</td>\n",
        "      <td>2.676202</td>\n",
        "      <td>0.173290</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>aminoaseed</th>\n",
+       "      <td>0.379036</td>\n",
+       "      <td>0.283963</td>\n",
+       "      <td>0.844974</td>\n",
+       "      <td>15.5</td>\n",
+       "      <td>2.243870</td>\n",
+       "      <td>0.292175</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>emc</th>\n",
@@ -743,6 +758,15 @@
        "      <td>0.280181</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>mif</th>\n",
+       "      <td>0.297578</td>\n",
+       "      <td>0.282813</td>\n",
+       "      <td>0.795659</td>\n",
+       "      <td>15.5</td>\n",
+       "      <td>2.593146</td>\n",
+       "      <td>0.231096</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>prostt5</th>\n",
        "      <td>0.232774</td>\n",
        "      <td>0.253838</td>\n",
@@ -761,6 +785,15 @@
        "      <td>0.275989</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>proteinmpnn</th>\n",
+       "      <td>0.371910</td>\n",
+       "      <td>0.277319</td>\n",
+       "      <td>0.851433</td>\n",
+       "      <td>15.5</td>\n",
+       "      <td>2.343534</td>\n",
+       "      <td>0.285716</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>saprot_3di</th>\n",
        "      <td>0.247545</td>\n",
        "      <td>0.252519</td>\n",
@@ -777,6 +810,7 @@
        "                                            precision    recall      hits  \\\n",
        "knn embedding                                                               \n",
        "20  ablang2                                  0.222329  0.223650  0.697239   \n",
+       "    aminoaseed                               0.379036  0.283963  0.844974   \n",
        "    emc                                      0.208441  0.207271  0.677094   \n",
        "    esm2                                     0.236538  0.181721  0.645844   \n",
        "    foldseek                                 0.361770  0.313618  0.857018   \n",
@@ -787,13 +821,16 @@
        "    igloo_no_dihedrals_embeddings            0.216782  0.194406  0.665094   \n",
        "    igloo_no_sequence_embeddings             0.356375  0.283101  0.851591   \n",
        "    igloo_tol1_embeddings                    0.408048  0.306059  0.852995   \n",
+       "    mif                                      0.297578  0.282813  0.795659   \n",
        "    prostt5                                  0.232774  0.253838  0.734838   \n",
        "    prostt5_3di                              0.359122  0.279899  0.846808   \n",
+       "    proteinmpnn                              0.371910  0.277319  0.851433   \n",
        "    saprot_3di                               0.247545  0.252519  0.790519   \n",
        "\n",
        "                                            loop_len      rmsd  rmsd_precision  \n",
        "knn embedding                                                                   \n",
        "20  ablang2                                     15.5  2.676202        0.173290  \n",
+       "    aminoaseed                                  15.5  2.243870        0.292175  \n",
        "    emc                                         15.5  2.650888        0.189960  \n",
        "    esm2                                        15.5  2.616186        0.206248  \n",
        "    foldseek                                    15.5  2.267806        0.281100  \n",
@@ -804,8 +841,10 @@
        "    igloo_no_dihedrals_embeddings               15.5  2.787291        0.193400  \n",
        "    igloo_no_sequence_embeddings                15.5  2.618416        0.245031  \n",
        "    igloo_tol1_embeddings                       15.5  2.441876        0.280181  \n",
+       "    mif                                         15.5  2.593146        0.231096  \n",
        "    prostt5                                     15.5  2.656494        0.200443  \n",
        "    prostt5_3di                                 15.5  2.293359        0.275989  \n",
+       "    proteinmpnn                                 15.5  2.343534        0.285716  \n",
        "    saprot_3di                                  15.5  2.603662        0.218167  "
       ]
      },
