--- a/paper_analyses/1_recovery_of_canonical_clusters/visualize_loops.ipynb
+++ b/paper_analyses/1_recovery_of_canonical_clusters/visualize_loops.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "3693bc11",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
     "from tqdm import tqdm\n",
     "from collections import defaultdict\n",
     "\n",
-    "DATA_DIR = \"/data/fanga5/sabdab\""
+    "DATA_DIR = \"sabdab\""
    ]
   },
   {
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "d76ce105",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
     "    loop_atoms = atom_array[loop_start_idx:loop_end_idx]\n",
     "    pdb_file = pdb.PDBFile()\n",
     "    pdb_file.set_structure(loop_atoms)\n",
-    "    pdb_file.write(f\"/data2/fanga5/loop_structures/{loop_type}_{ab_fname}\")"
+    "    pdb_file.write(f\"loop_structures/{loop_type}_{ab_fname}\")"
    ]
   },
   {
@@ -52,9 +52,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chains_df = pd.read_parquet(\"/data/fanga5/preprocessed_data/sabdab_2025-05-06-paired_chains.parquet\")\n",
+    "chains_df = pd.read_parquet(\"preprocessed_data/sabdab_2025-05-06-paired_chains.parquet\")\n",
     "loops_to_plot = []\n",
-    "with open(\"/data2/fanga5/paper_analyses/1_recovery_of_canonical_clusters/loops_to_plot.txt\", \"r\") as f:\n",
+    "with open(\"paper_analyses/1_recovery_of_canonical_clusters/loops_to_plot.txt\", \"r\") as f:\n",
     "    for line in f.readlines():\n",
     "        line = line.strip().split(\"_\")\n",
     "        loops_to_plot.append((int(line[0]), line[1]))"
@@ -530,8 +530,8 @@
    ],
    "source": [
     "loops_for_sequence_logo = []\n",
-    "chains_df = pd.read_parquet(\"/data/fanga5/preprocessed_data/sabdab_2025-05-06-paired_chains.parquet\")\n",
-    "with open(\"/data2/fanga5/paper_analyses/1_recovery_of_canonical_clusters/loops_for_sequence_logo.txt\", \"r\") as f:\n",
+    "chains_df = pd.read_parquet(\"preprocessed_data/sabdab_2025-05-06-paired_chains.parquet\")\n",
+    "with open(\"paper_analyses/1_recovery_of_canonical_clusters/loops_for_sequence_logo.txt\", \"r\") as f:\n",
     "    for line in f.readlines():\n",
     "        line = line.strip().split(\"_\")\n",
     "        loops_for_sequence_logo.append((int(line[0]), line[1]))\n",
