--- a/paper_analyses/2_retrieve_similar_loops/sabdab_test_set.ipynb
+++ b/paper_analyses/2_retrieve_similar_loops/sabdab_test_set.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7fea02ca",
    "metadata": {},
    "outputs": [],
@@ -14,11 +14,11 @@
     "from tqdm import tqdm\n",
     "\n",
     "import sys\n",
-    "sys.path.append(\"/homefs/home/fanga5/cdrcluster\")\n",
+    "sys.path.append(\"igloo\")\n",
     "from evals.metrics import dihedral_distance\n",
     "from evals.align_loops import kabsch_numpy\n",
     "\n",
-    "EMBEDDING_DIR = \"/data2/fanga5/benchmarking_data/paratope_binning/\"\n",
+    "EMBEDDING_DIR = \"benchmarking_data/paratope_binning/\"\n",
     "LOOP_TYPE = \"H3\""
    ]
   },
@@ -32,13 +32,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4e9c9644",
    "metadata": {},
    "outputs": [],
    "source": [
     "# select_loops = []\n",
-    "# with open(f\"/data/fanga5/data/test_loop_len_all_seed_42.jsonl\", \"r\") as f:\n",
+    "# with open(f\"data/test_loop_len_all_seed_42.jsonl\", \"r\") as f:\n",
     "#     for line in f:\n",
     "#         item = json.loads(line)\n",
     "#         if item['loop_id'].endswith(LOOP_TYPE):\n",
@@ -49,18 +49,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "66b4885d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# # for the files with resolution 3.5 suffix, the sabdab_id is wrong since it was numberd after filtering out for resolution\n",
     "# # fix it by using ab_fname for id mapping\n",
-    "# raw_df = pd.read_parquet(\"/data/fanga5/preprocessed_data/sabdab_2025-05-06-paired.parquet\")\n",
+    "# raw_df = pd.read_parquet(\"preprocessed_data/sabdab_2025-05-06-paired.parquet\")\n",
     "# raw_df['sabdab_id'] = range(len(raw_df))\n",
     "# ab_fname_to_id = {fname: sabdab_id for fname, sabdab_id in zip(raw_df['ab_fname'], raw_df['sabdab_id'])}\n",
     "\n",
-    "# data_df = pd.read_parquet(\"/data/fanga5/preprocessed_data/sabdab_2025-05-06-paired_chains_resolution_3.5.parquet\")\n",
+    "# data_df = pd.read_parquet(\"preprocessed_data/sabdab_2025-05-06-paired_chains_resolution_3.5.parquet\")\n",
     "# data_df['sabdab_id'] = data_df['ab_fname'].map(ab_fname_to_id)\n",
     "# data_df = data_df[data_df['chain_id'] == LOOP_TYPE[0]]\n",
     "# data_df = data_df[['sabdab_id', f'CDR{LOOP_TYPE[1]}_start', f'CDR{LOOP_TYPE[1]}_end', 'sequence']]\n",
@@ -68,8 +68,8 @@
     "# data_df['loop_sequence'] = data_df.apply(lambda row: row['sequence'][row['start']:row['end']], axis=1)\n",
     "# data_df['test'] = data_df['loop_id'].isin(select_loops_ids)\n",
     "\n",
-    "# data_df.to_csv(f\"/data/fanga5/data/sabdab_{LOOP_TYPE}_loops.csv\", index=False)\n",
-    "# print(f\"Saved {LOOP_TYPE} loops ({len(data_df)}) to /data/fanga5/data/sabdab_{LOOP_TYPE}_loops.csv\")"
+    "# data_df.to_csv(f\"data/sabdab_{LOOP_TYPE}_loops.csv\", index=False)\n",
+    "# print(f\"Saved {LOOP_TYPE} loops ({len(data_df)}) to data/sabdab_{LOOP_TYPE}_loops.csv\")"
    ]
   },
   {
@@ -82,12 +82,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "ddb126d4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fasta_3di = \"/data2/fanga5/sabdab/sabdab_db_ss.fasta\"\n",
+    "# fasta_3di = \"sabdab/sabdab_db_ss.fasta\"\n",
     "# seqeunces_3di = {}\n",
     "# with open(fasta_3di, \"r\") as f:\n",
     "#     for line in f:\n",
@@ -97,19 +97,19 @@
     "#         else:\n",
     "#             seqeunces_3di[fname] += line.strip()\n",
     "\n",
-    "# raw_df = pd.read_parquet(\"/data/fanga5/preprocessed_data/sabdab_2025-05-06-paired.parquet\")\n",
+    "# raw_df = pd.read_parquet(\"preprocessed_data/sabdab_2025-05-06-paired.parquet\")\n",
     "# raw_df['sabdab_id'] = range(len(raw_df))\n",
     "# ab_fname_to_id = {fname: sabdab_id for fname, sabdab_id in zip(raw_df['ab_fname'], raw_df['sabdab_id'])}\n",
     "# id_to_ab_fname = {sabdab_id: fname for fname, sabdab_id in ab_fname_to_id.items()}\n",
     "\n",
-    "# data_df = pd.read_csv(f\"/data/fanga5/data/sabdab_{LOOP_TYPE}_loops.csv\")\n",
+    "# data_df = pd.read_csv(f\"data/sabdab_{LOOP_TYPE}_loops.csv\")\n",
     "# data_df['ab_fname'] = data_df['loop_id'].map(id_to_ab_fname)\n",
     "# data_df['ab_fname_chain'] = data_df['ab_fname'].str.replace(\".pdb\", f\"_{LOOP_TYPE[0]}\")\n",
     "# data_df.loc[~data_df['ab_fname_chain'].isin(seqeunces_3di), 'ab_fname_chain'] = data_df['ab_fname'].str.replace(\".pdb\", \"\")\n",
     "# assert data_df['ab_fname_chain'].isin(seqeunces_3di).all(), \"Some ab_fname_chain are not in the 3di sequences\"\n",
     "# data_df['3di_sequence'] = data_df['ab_fname_chain'].map(seqeunces_3di)\n",
-    "# data_df.to_csv(f\"/data/fanga5/data/sabdab_{LOOP_TYPE}_loops_with_3di.csv\", index=False)\n",
-    "# print(f\"Saved {LOOP_TYPE} loops with 3di sequences ({len(data_df)}) to /data/fanga5/data/sabdab_{LOOP_TYPE}_loops_with_3di.csv\")"
+    "# data_df.to_csv(f\"data/sabdab_{LOOP_TYPE}_loops_with_3di.csv\", index=False)\n",
+    "# print(f\"Saved {LOOP_TYPE} loops with 3di sequences ({len(data_df)}) to data/sabdab_{LOOP_TYPE}_loops_with_3di.csv\")"
    ]
   },
   {
@@ -122,19 +122,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "ccd388e7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# loop_df = pd.read_parquet(\"/data/fanga5/preprocessed_data/sabdab_2025-05-06-paired_loops.parquet\")\n",
+    "# loop_df = pd.read_parquet(\"preprocessed_data/sabdab_2025-05-06-paired_loops.parquet\")\n",
     "# loop_df = loop_df[loop_df['loop_type'] == LOOP_TYPE]\n",
     "\n",
-    "# data_df = pd.read_csv(f\"/data/fanga5/data/sabdab_{LOOP_TYPE}_loops.csv\")\n",
+    "# data_df = pd.read_csv(f\"data/sabdab_{LOOP_TYPE}_loops.csv\")\n",
     "# data_df_with_angles = data_df.merge(loop_df[['sabdab_id', 'phi', 'psi', 'omega', 'c_alpha_atoms', 'stem_c_alpha_atoms']], left_on='loop_id', right_on='sabdab_id', how='inner')\n",
     "# data_df_with_angles.rename(columns={'c_alpha_atoms': 'loop_c_alpha_atoms'}, inplace=True)\n",
-    "# data_df_with_angles[['loop_id', 'loop_sequence', 'phi', 'psi', 'omega', 'loop_c_alpha_atoms', 'stem_c_alpha_atoms']].to_parquet(f\"/data/fanga5/data/sabdab_{LOOP_TYPE}_loops_with_angles.parquet\", index=False)\n",
-    "# print(f\"Saved {LOOP_TYPE} loops with angles ({len(data_df_with_angles)}) to /data/fanga5/data/sabdab_{LOOP_TYPE}_loops_with_angles.parquet\")"
+    "# data_df_with_angles[['loop_id', 'loop_sequence', 'phi', 'psi', 'omega', 'loop_c_alpha_atoms', 'stem_c_alpha_atoms']].to_parquet(f\"data/sabdab_{LOOP_TYPE}_loops_with_angles.parquet\", index=False)\n",
+    "# print(f\"Saved {LOOP_TYPE} loops with angles ({len(data_df_with_angles)}) to data/sabdab_{LOOP_TYPE}_loops_with_angles.parquet\")"
    ]
   },
   {
@@ -147,12 +147,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "16c965fd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "loop_df = pd.read_parquet(\"/data/fanga5/preprocessed_data/sabdab_2025-05-06-paired_loops.parquet\")\n",
+    "loop_df = pd.read_parquet(\"preprocessed_data/sabdab_2025-05-06-paired_loops.parquet\")\n",
     "loop_df = loop_df[loop_df['loop_type'] == LOOP_TYPE]\n",
     "\n",
     "loop_df['angles'] = loop_df.apply(lambda row: np.stack([row['phi'], row['psi'], row['omega']], axis=1), axis=1)\n",
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "711b1a75",
    "metadata": {},
    "outputs": [
@@ -348,7 +348,7 @@
     }
    ],
    "source": [
-    "data_df = pd.read_csv(f\"/data/fanga5/data/sabdab_{LOOP_TYPE}_loops.csv\")\n",
+    "data_df = pd.read_csv(f\"data/sabdab_{LOOP_TYPE}_loops.csv\")\n",
     "data_df['loop_len'] = data_df['end'] - data_df['start']\n",
     "data_df"
    ]
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "acf0e0d0",
    "metadata": {},
    "outputs": [
@@ -479,12 +479,12 @@
     "    igloo_angle_embeddings = np.stack(igloo_angle_embeddings)\n",
     "    return igloo_angle_embeddings\n",
     "\n",
-    "igloo_angle_embeddings = get_igloo_angle_embeddings(f\"/data2/fanga5/benchmarking_data/paratope_binning/IgLoo_sabdab_{LOOP_TYPE}_with_angles.jsonl\")\n",
-    "igloo_no_dihedral_loss_embeddings = get_igloo_angle_embeddings(f\"/data2/fanga5/benchmarking_data/paratope_binning/Igloo_ablation_no_dihedral_loss_sabdab_{LOOP_TYPE}.parquet\")\n",
-    "igloo_no_sequence_embeddings = get_igloo_angle_embeddings(f\"/data2/fanga5/benchmarking_data/paratope_binning/Igloo_ablation_no_sequence_sabdab_{LOOP_TYPE}.parquet\")\n",
-    "igloo_no_dihedrals_embeddings = get_igloo_angle_embeddings(f\"/data2/fanga5/benchmarking_data/paratope_binning/Igloo_ablation_no_dihedrals_sabdab_{LOOP_TYPE}.parquet\")\n",
-    "igloo_tol1_embeddings = get_igloo_angle_embeddings(f\"/data2/fanga5/benchmarking_data/paratope_binning/Igloo_ablation_tol1_v222_epoch30_sabdab_{LOOP_TYPE}.parquet\")\n",
-    "igloo_no_dihedral_threshold_embeddings = get_igloo_angle_embeddings(f\"/data2/fanga5/benchmarking_data/paratope_binning/Igloo_ablation_no_dihedral_threshold_sabdab_{LOOP_TYPE}.parquet\")"
+    "igloo_angle_embeddings = get_igloo_angle_embeddings(f\"benchmarking_data/paratope_binning/IgLoo_sabdab_{LOOP_TYPE}_with_angles.jsonl\")\n",
+    "igloo_no_dihedral_loss_embeddings = get_igloo_angle_embeddings(f\"benchmarking_data/paratope_binning/Igloo_ablation_no_dihedral_loss_sabdab_{LOOP_TYPE}.parquet\")\n",
+    "igloo_no_sequence_embeddings = get_igloo_angle_embeddings(f\"benchmarking_data/paratope_binning/Igloo_ablation_no_sequence_sabdab_{LOOP_TYPE}.parquet\")\n",
+    "igloo_no_dihedrals_embeddings = get_igloo_angle_embeddings(f\"benchmarking_data/paratope_binning/Igloo_ablation_no_dihedrals_sabdab_{LOOP_TYPE}.parquet\")\n",
+    "igloo_tol1_embeddings = get_igloo_angle_embeddings(f\"benchmarking_data/paratope_binning/Igloo_ablation_tol1_v222_epoch30_sabdab_{LOOP_TYPE}.parquet\")\n",
+    "igloo_no_dihedral_threshold_embeddings = get_igloo_angle_embeddings(f\"benchmarking_data/paratope_binning/Igloo_ablation_no_dihedral_threshold_sabdab_{LOOP_TYPE}.parquet\")"
    ]
   },
   {
