--- a/paper_analyses/3_abbibench/AbiBench.ipynb
+++ b/paper_analyses/3_abbibench/AbiBench.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "f63f3080",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/homefs/home/fanga5/micromamba/envs/pyenv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -28,13 +19,12 @@
     "import warnings\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "import sys\n",
-    "sys.path.append(\"/homefs/home/fanga5/cdrcluster\")\n",
-    "sys.path.append(\"/data2/fanga5/prescient/prescient/src\")\n",
+    "sys.path.append(\"igloo\")\n",
     "from FLab_process_sequences import get_loop_regions\n",
     "\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
-    "DATA_DIR = \"/data2/fanga5/benchmarking_data/AbiBench\""
+    "DATA_DIR = \"benchmarking_data/AbiBench\""
    ]
   },
   {
@@ -53,9 +43,9 @@
    "outputs": [],
    "source": [
     "# fetch light chains for better folding with Ibex\n",
-    "sabdab_df = pd.read_parquet(\"/data/fanga5/preprocessed_data/sabdab_2025-05-06-paired.parquet\")\n",
+    "sabdab_df = pd.read_parquet(\"preprocessed_data/sabdab_2025-05-06-paired.parquet\")\n",
     "\n",
-    "aayl_df = pd.read_csv('/data2/fanga5/benchmarking_data/AbiBench/raw/aayl49_51_MITLL_AAlphaBio_Ab_Binding_dataset.csv')\n",
+    "aayl_df = pd.read_csv('benchmarking_data/AbiBench/raw/aayl49_51_MITLL_AAlphaBio_Ab_Binding_dataset.csv')\n",
     "aayl_df['seed'] = aayl_df['POI'].str.split('_').str[0]\n",
     "aayl_df = aayl_df[aayl_df['seed'].isin(['AAYL49', 'AAYL51'])]\n",
     "aayl_df = aayl_df[['seed', 'LC']].drop_duplicates()\n",
@@ -323,25 +313,7 @@
    "execution_count": null,
    "id": "93a73ba1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processed 1mlc_benchmarking_data.csv (N=1229) and saved loop regions to /data2/fanga5/benchmarking_data/AbiBench/1mlc_benchmarking_data_loops.csv\n",
-      "Processed aayl51_benchmarking_data.csv (N=4320) and saved loop regions to /data2/fanga5/benchmarking_data/AbiBench/aayl51_benchmarking_data_loops.csv\n",
-      "Processed 4fqi_h3_benchmarking_data.csv (N=7174) and saved loop regions to /data2/fanga5/benchmarking_data/AbiBench/4fqi_h3_benchmarking_data_loops.csv\n",
-      "Processed 3gbn_h1_benchmarking_data.csv (N=1673) and saved loop regions to /data2/fanga5/benchmarking_data/AbiBench/3gbn_h1_benchmarking_data_loops.csv\n",
-      "Processed 2fjg_benchmarking_data.csv (N=2223) and saved loop regions to /data2/fanga5/benchmarking_data/AbiBench/2fjg_benchmarking_data_loops.csv\n",
-      "Processed 1n8z_benchmarking_data.csv (N=419) and saved loop regions to /data2/fanga5/benchmarking_data/AbiBench/1n8z_benchmarking_data_loops.csv\n",
-      "Processed aayl49_benchmarking_data.csv (N=4312) and saved loop regions to /data2/fanga5/benchmarking_data/AbiBench/aayl49_benchmarking_data_loops.csv\n",
-      "Processed aayl49_ML_benchmarking_data.csv (N=8953) and saved loop regions to /data2/fanga5/benchmarking_data/AbiBench/aayl49_ML_benchmarking_data_loops.csv\n",
-      "Processed 1mhp_benchmarking_data.csv (N=43) and saved loop regions to /data2/fanga5/benchmarking_data/AbiBench/1mhp_benchmarking_data_loops.csv\n",
-      "Processed 3gbn_h9_benchmarking_data.csv (N=1470) and saved loop regions to /data2/fanga5/benchmarking_data/AbiBench/3gbn_h9_benchmarking_data_loops.csv\n",
-      "Processed 4fqi_h1_benchmarking_data.csv (N=63419) and saved loop regions to /data2/fanga5/benchmarking_data/AbiBench/4fqi_h1_benchmarking_data_loops.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# mask_out_values = {\n",
     "#     '3gbn_h1': 7.0,\n",
@@ -391,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "c814e106",
    "metadata": {},
    "outputs": [],
@@ -401,7 +373,7 @@
     "        continue\n",
     "\n",
     "    seed = fname.replace(\"_benchmarking_data_loops.csv\", \"\")\n",
-    "    parquet_path = f'/data2/fanga5/benchmarking_data/AbiBench/ibex_structures/{seed}_loop_angles.parquet'\n",
+    "    parquet_path = f'benchmarking_data/AbiBench/ibex_structures/{seed}_loop_angles.parquet'\n",
     "    if not os.path.exists(parquet_path):\n",
     "        print(f\"Skipping {fname} because {parquet_path} does not exist\")\n",
     "        continue\n",
