--- a/paper_analyses/4_sampled_cdrs/analyse_sampled_cdrs.ipynb
+++ b/paper_analyses/4_sampled_cdrs/analyse_sampled_cdrs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "34bf3b6b",
    "metadata": {},
    "outputs": [],
@@ -25,9 +25,9 @@
     "\n",
     "threetoone = ProteinSequence.convert_letter_3to1\n",
     "\n",
-    "SABDAB_DIR = \"/data/fanga5/sabdab\"\n",
+    "SABDAB_DIR = \"sabdab\"\n",
     "\n",
-    "chains_df = pd.read_parquet(\"/data/fanga5/preprocessed_data/sabdab_2025-05-06-paired_chains.parquet\")"
+    "chains_df = pd.read_parquet(\"preprocessed_data/sabdab_2025-05-06-paired_chains.parquet\")"
    ]
   },
   {
@@ -40,17 +40,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2bcb3374",
    "metadata": {},
    "outputs": [],
    "source": [
     "temperatures = [0.01, 0.05, 0.1, 0.2, 0.5, 1.0, 2.0]\n",
-    "sampled_sequences_dir = \"/data2/fanga5/sample_cdrs/igbert\"\n",
+    "sampled_sequences_dir = \"sample_cdrs/igbert\"\n",
     "for temp in temperatures:\n",
     "    temp_dfs = []\n",
     "    for loop_type in ['L1', 'L2', 'L3', 'H1', 'H2', 'H3']:\n",
-    "        sampled_sequences = f\"/data2/fanga5/sample_cdrs/igbert/sampled_sequences/temp_{temp}/{loop_type}_sample.csv\"\n",
+    "        sampled_sequences = f\"sample_cdrs/igbert/sampled_sequences/temp_{temp}/{loop_type}_sample.csv\"\n",
     "        df = pd.read_csv(sampled_sequences)\n",
     "        seq_col = 'fv_heavy' if loop_type.startswith('H') else 'fv_light'\n",
     "        df.rename(columns={'sequence': seq_col}, inplace=True)\n",
@@ -60,7 +60,7 @@
     "        df['id'] = df['seqid'].str.replace('.pdb','') + f\"_{loop_type}_\" + df['sample_id'].astype(str)\n",
     "        temp_dfs.append(df[['id', 'fv_heavy', 'fv_light']])\n",
     "    temp_df = pd.concat(temp_dfs, ignore_index=True)\n",
-    "    temp_df.to_csv(f\"/data2/fanga5/sample_cdrs/igbert/output/temp_{temp}_ibex.csv\", index=False)\n"
+    "    temp_df.to_csv(f\"sample_cdrs/igbert/output/temp_{temp}_ibex.csv\", index=False)\n"
    ]
   },
   {
@@ -74,12 +74,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "347a9828",
    "metadata": {},
    "outputs": [],
    "source": [
-    "results_df = pd.read_csv('/data2/fanga5/sample_cdrs/rmsd_results.csv')\n",
+    "results_df = pd.read_csv('sample_cdrs/rmsd_results.csv')\n",
     "results_df['edit_distance'] = results_df.apply(lambda row: sum(c1 != c2 for c1, c2 in zip(row['sabdab_seq'], row['sampled_seq'])), axis=1)\n",
     "results_df['sequence_identity'] = results_df.apply(lambda row: 1 - (row['edit_distance'] / len(row['sabdab_seq'])), axis=1)"
    ]
@@ -1551,7 +1551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "id": "dd88a027",
    "metadata": {
     "vscode": {
@@ -1593,7 +1593,7 @@
     }
    ],
    "source": [
-    "chain_df = pd.read_parquet(\"/data/fanga5/preprocessed_data/sabdab_2025-05-06-paired_chains.parquet\")\n",
+    "chain_df = pd.read_parquet(\"preprocessed_data/sabdab_2025-05-06-paired_chains.parquet\")\n",
     "chain_df[(chain_df['ab_fname'] == ab_fname) & (chain_df['chain_id'] == chain_id)].iloc[0]"
    ]
   },
